--- a/deploy/services/gitlab/docker-compose.yml
+++ b/deploy/services/gitlab/docker-compose.yml
@@ -10,6 +10,11 @@ services:
       GITLAB_OMNIBUS_CONFIG: |
         external_url '${URL_SCHEME}://${SERVER_DNS}/gitlab'
         gitlab_rails['gitlab_shell_ssh_port'] = 2424
+        nginx['listen_port'] = 80
+        nginx['enable'] = true
+        nginx['listen_https'] = false
+        nginx['redirect_http_to_https'] = false
+        letsencrypt['enable'] = false
     volumes:
       - '${GITLAB_HOME}/config:/etc/gitlab'
       - '${GITLAB_HOME}/logs:/var/log/gitlab'
