--- a/deploy/services/gitlab/.env
+++ b/deploy/services/gitlab/.env
@@ -1,3 +1,7 @@
+DTAAS_DIR='/Users/<Username>/DTaaS'
 SERVER_DNS='foo.com'
-GITLAB_HOME='/srv/gitlab'
+GITLAB_HOME='${DTAAS_DIR}/deploy/services/gitlab/data'
 URL_SCHEME='https'
+ROUTER_ENTRYPOINTS='web-secure' # set this to 'web' if URL_SCHEME='http'
+ENABLE_TLS='true' # set this to 'false' if URL_SCHEME='http'
+GITLAB_IMAGE='gitlab/gitlab-ce:17.3.1-ce.0'
