feat: Make gitlab use local directory

--- a/deploy/services/gitlab/.env
+++ b/deploy/services/gitlab/.env
@@ -1,6 +1,5 @@
-DTAAS_DIR='/Users/<Username>/DTaaS'
+GITLAB_HOME='/Users/<Username>/DTaaS/deploy/services/gitlab'
 SERVER_DNS='foo.com'
-GITLAB_HOME='${DTAAS_DIR}/deploy/services/gitlab/data'
 URL_SCHEME='https'
 ROUTER_ENTRYPOINTS='web-secure' # set this to 'web' if URL_SCHEME='http'
 ENABLE_TLS='true' # set this to 'false' if URL_SCHEME='http'
