--- a/client/package.json
+++ b/client/package.json
@@ -48,10 +48,12 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@gitbeaker/rest": "^40.1.3",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "@mui/x-tree-view": "^7.17.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/remarkable": "^2.0.8",
     "@types/styled-components": "^5.1.32",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
@@ -76,6 +78,7 @@
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "react-tabs": "^6.0.2",
     "redux": "^4.2.1",
     "remark-gfm": "^4.0.0",
