--- a/deploy/docker/.env.server
+++ b/deploy/docker/.env.server
@@ -1,6 +1,6 @@
 DTAAS_DIR='/Users/<Username>/DTaaS'
 SERVER_DNS='foo.com'
-OAUTH_URL='https://foo.com/gitlab'
+OAUTH_URL='https://gitlab.foo.com'
 CLIENT_ID='xx'
 CLIENT_SECRET='xx'
 OAUTH_SECRET='random-secret-string'
