--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -15,6 +15,9 @@ jobs:
   client:
     name: Test react website
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: client/
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -26,21 +29,22 @@ jobs:
           cache: "yarn"
           cache-dependency-path: "**/yarn.lock"
 
+      - name: Install dependencies
+        run: |
+          yarn install
+          yarn playwright install --with-deps
+
       - name: Run the linting checks
         run: |
-          cd client/	
-          yarn install	
           yarn syntax
-      - name: Build the React SPA website
+
+      - name: Build the React SPA website and setup env
         run: |
-          cd client/	
-          yarn install	
           yarn build
+          yarn config:test
+
       - name: Run client unit and integration tests
         run: |
-          cd client/	
-          yarn install	
-          yarn config:test
           yarn test:int
           yarn test:unit
 
@@ -48,7 +52,26 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           files: client/coverage/clover.xml
-          flags: client-unit-integration-tests
+          flags: client-unit-integration-tests 
+        
+      - name: Run e2e tests
+        continue-on-error: true
+        run: |
+          yarn test:e2e
+
+      - name: Upload Playwright Report
+        uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: client/playwright-report/**
+          retention-days: 30
+
+      - name: Upload e2e test coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: client/coverage/e2e/codecov.json
+          flags: client-e2e-tests
 
   get_version:
     name: Get version
