--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -34,48 +34,48 @@
   "dependencies": {
     "@apollo/client": "^3.11.8",
     "@apollo/server": "^4.11.0",
-    "@nestjs/apollo": "^12.0.11",
-    "@nestjs/common": "^10.3.7",
-    "@nestjs/config": "^3.2.0",
-    "@nestjs/core": "^10.4.3",
-    "@nestjs/graphql": "^12.0.11",
-    "@nestjs/platform-express": "^10.3.7",
-    "axios": "^1.5.1",
-    "cloudcmd": "^16.17.7",
-    "commander": "^11.1.0",
-    "dotenv": "^16.3.1",
-    "graphql": "^16.8.1",
+    "@nestjs/apollo": "^12.2.0",
+    "@nestjs/common": "^10.4.4",
+    "@nestjs/config": "^3.2.3",
+    "@nestjs/core": "^10.4.4",
+    "@nestjs/graphql": "^12.2.0",
+    "@nestjs/platform-express": "^10.4.4",
+    "axios": "^1.7.7",
+    "cloudcmd": "^18.1.0",
+    "commander": "^12.1.0",
+    "dotenv": "^16.4.5",
+    "graphql": "^16.9.0",
     "mock-fs": "^5.2.0",
-    "reflect-metadata": "^0.2.1",
+    "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.7.2",
-    "type-graphql": "^2.0.0-beta.3"
+    "socket.io": "^4.8.0",
+    "type-graphql": "^2.0.0-rc.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.3.2",
-    "@nestjs/schematics": "^10.1.1",
-    "@nestjs/testing": "^10.3.3",
+    "@nestjs/cli": "^10.4.5",
+    "@nestjs/schematics": "^10.1.4",
+    "@nestjs/testing": "^10.4.4",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "@types/node": "20.12.5",
+    "@types/jest": "^29.5.13",
+    "@types/node": "22.7.0",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.4.0",
-    "@typescript-eslint/parser": "^8.4.0",
+    "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "@typescript-eslint/parser": "^8.7.0",
     "cross-fetch": "^4.0.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.11.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^28.2.0",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-prettier": "^5.2.1",
-    "graphql-scalars": "^1.22.2",
+    "graphql-scalars": "^1.23.0",
     "jest": "29.7.0",
-    "prettier": "^3.2.2",
-    "react": "^18.2.0",
-    "supertest": "^6.3.4",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
+    "prettier": "^3.3.3",
+    "react": "^18.3.1",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.6.2"
   }
 }
