--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@eslint/migrate-config": "^1.3.0",
     "@fontsource/roboto": "^5.0.8",
     "@gitbeaker/rest": "^40.1.2",
     "@monaco-editor/react": "^4.6.0",
@@ -61,7 +62,7 @@
     "@typescript-eslint/parser": "^8.7.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.1.4",
-    "eslint": "9.11.1",
+    "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
@@ -88,12 +89,14 @@
     "resize-observer-polyfill": "^1.5.1",
     "serve": "^14.2.1",
     "styled-components": "^6.1.1",
-    "typescript": "^5.6.2"
+    "typescript": "5.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
     "@babel/plugin-syntax-flow": "^7.23.3",
     "@babel/plugin-transform-react-jsx": "^7.23.4",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.11.1",
     "@playwright/test": "^1.32.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.1.4",
@@ -102,6 +105,7 @@
     "@types/jest": "^29.5.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.2.17",
+    "globals": "^15.9.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "monocart-coverage-reports": "^2.10.2",
