--- a/client/package.json
+++ b/client/package.json
@@ -93,6 +93,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-syntax-flow": "^7.23.3",
     "@babel/plugin-transform-react-jsx": "^7.23.4",
     "@eslint/eslintrc": "^3.1.0",
