--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -44,6 +44,7 @@
     "cloudcmd": "^18.1.0",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
+    "globals": "^15.9.0",
     "graphql": "^16.9.0",
     "mock-fs": "^5.2.0",
     "reflect-metadata": "^0.2.2",
@@ -52,6 +53,8 @@
     "type-graphql": "^2.0.0-rc.2"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.1.1",
+    "@eslint/eslintrc": "^3.1.0",
     "@nestjs/cli": "^10.4.5",
     "@nestjs/schematics": "^10.1.4",
     "@nestjs/testing": "^10.4.4",
