--- a/client/package.json
+++ b/client/package.json
@@ -92,28 +92,30 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.3",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-syntax-flow": "^7.23.3",
-    "@babel/plugin-transform-react-jsx": "^7.23.4",
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.11.1",
-    "@playwright/test": "^1.32.1",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.10",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.2.17",
-    "globals": "^15.9.0",
+    "@babel/core": "7.25.2",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "@babel/plugin-syntax-flow": "7.24.7",
+    "@babel/plugin-transform-react-jsx": "7.25.2",
+    "@eslint/eslintrc": "3.1.0",
+    "@eslint/js": "9.11.1",
+    "@playwright/test": "1.47.2",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.5.0",
+    "@testing-library/react": "16.0.1",
+    "@testing-library/user-event": "14.5.2",
+    "@types/jest": "29.5.13",
+    "@types/node": "^22.7.4",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "18.3.0",
+    "globals": "15.9.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "monocart-coverage-reports": "^2.10.2",
-    "playwright": "^1.32.1",
-    "prettier": "^3.2.4",
-    "shx": "^0.3.4",
-    "ts-jest": "^29.1.1"
+    "jest-environment-jsdom": "29.7.0",
+    "jest-watch-typeahead": "^2.2.2",
+    "monocart-coverage-reports": "2.10.9",
+    "playwright": "1.47.2",
+    "prettier": "3.3.3",
+    "shx": "0.3.4",
+    "ts-jest": "29.2.5"
   },
   "browserslist": {
     "production": [
