updated config files

--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -10,25 +10,26 @@
   ],
   "private": false,
   "license": "SEE LICENSE IN <LICENSE.md>",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "clean": "npx rimraf build node_modules coverage dist src.svg test.svg",
     "format": "prettier --ignore-path ../.gitignore --write \"**/*.{ts,tsx,css,scss}\"",
     "graph": "npx madge --image src.svg src && npx madge --image test.svg test",
-    "start": "node dist/src/main.js",
-    "start:pm2": "pm2 start pm2.config.js",
+    "start": "tsc & node dist/src/main.js",
+    "start:pm2": "pm2 start pm2.config.cjs",
     "stop:pm2": "pm2 delete libms",
     "syntax": "eslint . --fix",
     "pretest": "npx shx cp test/data/user2/tools/README.md ../../files/user2/tools/README.md",
     "posttest": "npx rimraf ../../files/user2/tools/README.md",
-    "test:all": "npx cross-env LOCAL_PATH=test/data jest --testPathIgnorePatterns=cloudcmd --coverage",
-    "test:e2e": "npx cross-env LOCAL_PATH=test/data jest --config ./test/jest-e2e.json --coverage",
+    "test:all": "npx cross-env NODE_OPTIONS=--experimental-vm-modules LOCAL_PATH=test/data jest --testPathIgnorePatterns=cloudcmd --coverage",
+    "test:e2e": "npx cross-env NODE_OPTIONS=--experimental-vm-modules LOCAL_PATH=test/data jest --config ./test/jest-e2e.json --coverage",
     "test:http": "yarn build && pm2 start -f --name libms-test dist/src/main.js -- -c .env -H ./config/http.json && jest test/cloudcmd --coverage --coverageThreshold=\"{}\" && pm2 delete libms-test",
     "test:http-nocov": "yarn build && pm2 start -f --name libms-test dist/src/main.js -- -c .env -H ./config/http.json && jest test/cloudcmd  --coverage=false && pm2 delete libms-test",
     "test:http-github": "jest test/cloudcmd --coverage --coverageThreshold=\"{}\"",
-    "test:int": "npx cross-env LOCAL_PATH=test/data jest ../test/integration --coverage",
+    "test:int": "npx cross-env NODE_OPTIONS=--experimental-vm-modules LOCAL_PATH=test/data jest ../test/integration --coverage",
     "test:nocov": "yarn test:http-nocov && npx cross-env LOCAL_PATH=test/data jest --testPathIgnorePatterns=cloudcmd --coverage=false",
-    "test:unit": "npx cross-env LOCAL_PATH=test/data jest ../test/unit --coverage"
+    "test:unit": "npx cross-env NODE_OPTIONS=--experimental-vm-modules LOCAL_PATH=test/data jest ../test/unit --coverage"
   },
   "bin": "./dist/src/main.js",
   "dependencies": {
@@ -72,7 +73,7 @@
     "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-prettier": "^5.2.1",
     "graphql-scalars": "^1.23.0",
-    "jest": "29.7.0",
+    "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "supertest": "^7.0.0",
