--- a/servers/lib/jest.config.json
+++ b/servers/lib/jest.config.json
@@ -1,10 +1,14 @@
 {
-  "preset": "ts-jest",
+  "preset": "ts-jest/presets/default-esm",
   "testEnvironment": "node",
   "transform": {
-    "^.+\\.tsx?$": "ts-jest"
+    "(src|test)/^.+\\.(t|j)sx?$": [
+      "ts-jest",
+      {
+        "useESM": true
+      }
+    ]
   },
-  "transformIgnorePatterns": ["/node_modules/(?![d3-shape|recharts]).+\\.js$"],
   "collectCoverage": true,
   "coverageReporters": ["text", "cobertura", "clover", "lcov", "json"],
   "collectCoverageFrom": ["src/**/*.{ts,js}"],
@@ -12,10 +16,15 @@
     "node_modules",
     "./dist",
     "../src/app.module.ts",
-    "../src/main.ts",
-    "../src/bootstrap.ts"
+    "../src/main.ts"
   ],
-  "modulePathIgnorePatterns": ["config"],
+  "extensionsToTreatAsEsm": [".ts"],
+  "moduleFileExtensions": [
+    "js",
+    "json",
+    "ts"
+  ],
+  "modulePathIgnorePatterns": [],
   "coverageDirectory": "<rootDir>/coverage/",
   "coverageThreshold": {
     "global": {
@@ -27,5 +36,19 @@
   },
   "verbose": true,
   "testRegex": "./test/.*\\.spec.tsx?$",
-  "modulePaths": ["<rootDir>/src/"]
+  "modulePaths": ["<rootDir>", "<rootDir>/src/", "<rootDir>/test/"],
+  "moduleDirectories": [
+    "node_modules",
+    "src",
+    "test"
+  ],
+  "rootDir": "./",
+  "roots": [
+    "<rootDir>",
+    "src/",
+    "test/"
+  ],
+  "moduleNameMapper": {
+    "^(\\.\\/.+)\\.js$": "$1"
+  }  
 }
