--- a/client/package.json
+++ b/client/package.json
@@ -105,8 +105,8 @@
     "@testing-library/user-event": "14.5.2",
     "@types/jest": "29.5.13",
     "@types/node": "^22.7.4",
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "18.3.0",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
     "globals": "15.9.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "29.7.0",
