--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@into-cps-association/dtaas-web",
-  "version": "0.4.2",
+  "version": "0.3.6",
   "description": "Web client for Digital Twin as a Service (DTaaS)",
   "main": "index.tsx",
   "author": "prasadtalasila <prasad.talasila@gmail.com> (http://prasad.talasila.in/)",
@@ -15,15 +15,15 @@
   "private": false,
   "type": "module",
   "scripts": {
-    "build": "npx shx cp config/gitlab.json src/util/gitlab.json && npx react-scripts build && npx rimraf src/util/gitlab.json",
-    "clean": "npx rimraf build/ dist/ node_modules/ coverage/ playwright-report/  *.svg src/util/gitlab.json",
+    "build": "npx react-scripts build",
+    "clean": "npx rimraf build/ dist/ node_modules/ coverage/ playwright-report/  *.svg",
     "config:dev": "npx shx cp config/dev.js public/env.js && npx shx cp config/dev.js build/env.js",
     "config:local": "npx shx cp config/local.js public/env.js && npx shx cp config/local.js build/env.js",
     "config:prod": "npx shx cp config/prod.js public/env.js && npx shx cp config/prod.js build/env.js",
     "config:test": "npx shx cp config/test.js public/env.js && npx shx cp config/test.js build/env.js",
-    "develop": "npx shx cp config/gitlab.json src/util/gitlab.json && npx react-scripts start",
+    "develop": "npx react-scripts start",
     "format": "prettier --ignore-path ../.gitignore --write \"**/*.{ts,tsx,css,scss}\"",
-    "gitlab:compile": "npx shx cp config/gitlab.json src/util/gitlab.json && npx tsc --project tsconfig.gitlab.json && npx rimraf src/util/gitlab.json",
+    "gitlab:compile": "npx tsc --project tsconfig.gitlab.json",
     "gitlab:run": "node dist/gitlabDriver.js",
     "graph": "npx madge --image src.svg src && npx madge --image test.svg test",
     "start": "serve -s build -l 4000",
@@ -32,9 +32,7 @@
     "test:all": "yarn test:unit && yarn test:int && yarn test:e2e",
     "test:e2e": "yarn build && yarn config:test && npx kill-port 4000 && yarn start >/dev/null & playwright test && npx kill-port 4000",
     "test:int": "jest -c ./jest.config.json ../test/integration --setupFilesAfterEnv ./test/integration/jest.setup.ts",
-    "test:unit": "jest -c ./jest.config.json ../test/unit --setupFilesAfterEnv ./test/unit/jest.setup.ts",
-    "test:preview:int": "jest -c ./jest.config.json ../test/preview/integration --setupFilesAfterEnv ./test/preview/integration/jest.setup.ts",
-    "test:preview:unit": "jest -c ./jest.config.json ../test/preview/unit --setupFilesAfterEnv ./test/preview/unit/jest.setup.ts"
+    "test:unit": "jest -c ./jest.config.json ../test/unit --setupFilesAfterEnv ./test/unit/jest.setup.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -48,14 +46,10 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
-    "@gitbeaker/rest": "^40.1.3",
-    "@monaco-editor/react": "^4.6.0",
+    "@gitbeaker/rest": "^40.1.2",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
-    "@mui/x-tree-view": "^7.17.0",
     "@reduxjs/toolkit": "^1.9.7",
-    "@types/react-syntax-highlighter": "^15.5.13",
-    "@types/remarkable": "^2.0.8",
     "@types/styled-components": "^5.1.32",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
@@ -73,20 +67,14 @@
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.5",
     "react-is": "^18.2.0",
-    "react-markdown": "^9.0.1",
     "react-oidc-context": "^2.2.2",
     "react-redux": "^8.1.3",
-    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
-    "react-syntax-highlighter": "^15.5.0",
     "react-tabs": "^6.0.2",
     "redux": "^4.2.1",
-    "remark-gfm": "^4.0.0",
-    "remarkable": "^2.0.1",
     "resize-observer-polyfill": "^1.5.1",
     "serve": "^14.2.1",
-    "strip-ansi": "^7.1.0",
     "styled-components": "^6.1.1",
     "typescript": "^4.9.5"
   },
@@ -95,13 +83,13 @@
     "@babel/plugin-syntax-flow": "^7.23.3",
     "@babel/plugin-transform-react-jsx": "^7.23.4",
     "@playwright/test": "^1.32.1",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.10",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.2.17",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "playwright": "^1.32.1",
