--- a/client/tsconfig.gitlab.json
+++ b/client/tsconfig.gitlab.json
@@ -9,6 +9,7 @@
     "types": ["react", "node"], //use react and node types
     "module": "esnext", //use esnext modules
     "moduleResolution": "node", //use node module resolution strategy node
+    "resolveJsonModule": true,
     "experimentalDecorators": true, //allow experimental decorators for es7
     "declaration": false, //don't generate declaration '.d.ts' files
     "removeComments": true, //remove comments from build
@@ -25,8 +26,9 @@
   },
   "exclude": ["**/node_modules/*", "babel.config.cjs", "dist", "test"],
   "include": [
-    "./src/util/gitlab*.ts",
-    "./test/unitTests/Util/gitlab*.test.ts"
+    "./config/gitlab.json",
+    "./src/preview/util/gitlab*.ts",
+    "./test/preview/unit/util/gitlab*.test.ts"
   ],
   "typeRoots": [ "**/node_modules/@types" ]
 }
