Update package.json and jest.config.json

--- a/client/jest.config.json
+++ b/client/jest.config.json
@@ -25,7 +25,7 @@
     "src/index.tsx",
     "src/AppProvider.tsx",
     "src/store/store.ts",
-    "src/util/gitlabDriver.ts"
+    "src/preview/util/gitlabDriver.ts"
   ],
   "modulePathIgnorePatterns": [
     "test/e2e",
