Add 'Execute' tab to Digital Twins page preview (#903)
Adds experimental digital execution on gitlab DevOps
pipeline. This execution can happen with an external
gitlab like gitlab.com but requires certain gitlab project
setup to work.

---------
Co-authored-by: vanessa <vanessascherma@gmail.com>

--- a/client/tsconfig.gitlab.json
+++ b/client/tsconfig.gitlab.json
@@ -26,9 +26,9 @@
   },
   "exclude": ["**/node_modules/*", "babel.config.cjs", "dist", "test"],
   "include": [
-    "./src/util/gitlab.json",
-    "./src/util/gitlab*.ts",
-    "./test/unitTests/Util/gitlab*.test.ts"
+    "./config/gitlab.json",
+    "./src/preview/util/gitlab*.ts",
+    "./test/preview/unit/util/gitlab*.test.ts"
   ],
   "typeRoots": [ "**/node_modules/@types" ]
 }
