--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,6 +17,11 @@ on:
       dockerfile:
         required: true
         type: string
+    secrets:
+      DOCKERHUB_USERNAME:
+        required: true
+      DOCKERHUB_TOKEN:
+        required: true
 
 jobs:
   build-and-push-image:
@@ -30,29 +35,42 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Log in to the Container registry
+      # - name: Log in to the Container registry
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: ${{ inputs.registry }}
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
+
+      # - name: Check if version exists
+      #   id: check_version
+      #   run: |
+      #     if docker manifest inspect ${{ inputs.registry }}/${{ inputs.image-name }}:${{ inputs.version }} > /dev/null 2>&1; then
+      #       echo "Version ${{ inputs.version }} already exists."
+      #       echo "exists=true" >> $GITHUB_ENV
+      #     else
+      #       echo "Version ${{ inputs.version }} does not exist."
+      #       echo "exists=false" >> $GITHUB_ENV
+      #     fi
+
+      - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
-          registry: ${{ inputs.registry }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Check if version exists
-        id: check_version
-        run: |
-          if docker manifest inspect ${{ inputs.registry }}/${{ inputs.image-name }}:${{ inputs.version }} > /dev/null 2>&1; then
-            echo "Version ${{ inputs.version }} already exists."
-            echo "exists=true" >> $GITHUB_ENV
-          else
-            echo "Version ${{ inputs.version }} does not exist."
-            echo "exists=false" >> $GITHUB_ENV
-          fi
-
-      - name: Build and push Docker image
-        if: env.exists == 'false'
-        uses: docker/build-push-action@v5
+      - name: Build and push
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./docker/${{ inputs.dockerfile }}
           push: true
-          tags: ${{ inputs.registry }}/${{ inputs.image-name }}:${{ inputs.version }}, ${{ inputs.registry }}/${{ inputs.image-name }}:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ inputs.image-name }}:${{ inputs.version }}, ${{ secrets.DOCKERHUB_USERNAME }}/${{ inputs.image-name }}:latest
+
+      - name: Docker Hub Description
+        uses: peter-evans/dockerhub-description@v4
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          repository: ${{ secrets.DOCKERHUB_USERNAME }}/dtaas-web
+          readme-filepath: client/README.md
