--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -101,5 +101,5 @@ jobs:
       image-name: dtaas-web
       version: ${{ needs.get_version.outputs.version }}
       dockerfile: client.dockerfile
-      readme-file: client/README.md
+      readme-file: client/DOCKER.md
     secrets: inherit
