Refactor docker.yml + Push libms to DockerHub

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -101,4 +101,5 @@ jobs:
       image-name: dtaas-web
       version: ${{ needs.get_version.outputs.version }}
       dockerfile: client.dockerfile
+      readme-file: client/README.md
     secrets: inherit
