--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -110,6 +110,21 @@ jobs:
           files: servers/lib/coverage/clover.xml
           flags: lib-microservice-tests
 
+  get_version:
+    name: Get version
+    runs-on: ubuntu-latest
+    steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v4
+        - name: Install jq
+          run: sudo apt-get install -y jq
+        - name: get version
+          id: get_version
+          run: | 
+            version=`cat ./servers/lib/package.json | jq -r '.version'`
+            echo "version=$version" >> $GITHUB_OUTPUT
+    outputs:
+      version: ${{ steps.get_version.outputs.version }}
 
   publish-package:
     if: | 
@@ -118,7 +133,7 @@ jobs:
 
     name: Publish to GitHub Packages
     runs-on: ubuntu-latest
-    needs: test-lib-ms
+    needs: [get_version, test-lib-ms]
     permissions:
       packages: write
       contents: read
@@ -147,25 +162,9 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
 
-  get_version:
-    name: Get version
-    runs-on: ubuntu-latest
-    steps:
-        - name: Checkout Repository
-          uses: actions/checkout@v4
-        - name: Install jq
-          run: sudo apt-get install -y jq
-        - name: get version
-          id: get_version
-          run: | 
-            version=`cat ./servers/lib/package.json | jq -r '.version'`
-            echo "version=$version" >> $GITHUB_OUTPUT
-    outputs:
-      version: ${{ steps.get_version.outputs.version }}
-
   publish-docker-image:
     name: Publish Docker image
-    needs: [ publish-package, get_version]
+    needs: [get_version, test-lib-ms]
     uses: ./.github/workflows/docker.yml
     with: 
       image-name: libms
