Upgrades dependencies of libms (#943)
 - Upgrades the npm packages of libms
   to the latest versions.
 - Upgrades eslint and tsconfig to be compatibe
   with the latest versions of these packages
 - Adds Windows OS to Github actions of libms

--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -12,7 +12,10 @@ on:
 jobs:
   test-lib-ms:
     name: Test library microservice
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest]
+    runs-on: ${{ matrix.os }}
     defaults:
       run:
         working-directory: servers/lib
@@ -67,7 +70,18 @@ jobs:
           yarn build
           yarn start:pm2
       
-      - name: Check server is running
+      - name: Check server is running (Windows)
+        if: runner.os == 'Windows'
+        env:
+          PORT: 4003
+        uses: nick-fields/retry@v3
+        with:
+          timeout_seconds: 10
+          max_attempts: 4
+          command: "Invoke-WebRequest -Uri http://localhost:${{ env.PORT }}/lib/files -Method Head -UseBasicParsing"
+
+      - name: Check server is running (Linux)
+        if: runner.os != 'Windows'
         env:
           PORT: 4003
         uses: nick-fields/retry@v3
@@ -75,7 +89,7 @@ jobs:
           timeout_seconds: 10
           max_attempts: 4
           command: "curl -f -LI http://localhost:${{ env.PORT }}/lib/files"
-          
+
       - name: Run http test
         env:
           PORT: 4003
