Adds integrated gitlab to DTaaS installation (#961)
- Adds code for https installation of DTaaS on both localhost
  and production server.
- Integrates gitlab into DTaaS installation and makes gitlab
  available at /gitlab path suffix. Replaces old Javascript code
  used for gitlab installation with pure docker compose file.

---------
Co-authored-by: robo-mop <realaryanpingle@gmail.com>
Co-authored-by: Aryan Pingle <49340972+aryanpingle@users.noreply.github.com>

--- a/deploy/docker/compose.server.secure.yml
+++ b/deploy/docker/compose.server.secure.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   traefik:
     image: traefik:v2.10
@@ -19,7 +18,7 @@ services:
       - "443:443"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - "${DTAAS_DIR}/deploy/docker/dynamic:/etc/traefik/dynamic"
+      - "${DTAAS_DIR}/deploy/docker/dynamic/tls.yml:/etc/traefik/dynamic/tls.yml"
       - "${DTAAS_DIR}/deploy/docker/certs:/etc/traefik-certs"
     networks:
       - frontend
@@ -96,6 +95,7 @@ services:
     restart: unless-stopped
     volumes:
       - "${DTAAS_DIR}/deploy/docker/conf.server:/conf"
+      - "${DTAAS_DIR}/deploy/docker/resolv.conf:/etc/resolv.conf"
     environment:
       - LOG_LEVEL=trace
       - DEFAULT_PROVIDER=generic-oauth
