Render images, tables and mathematical notation  in DetailsDialog

--- a/client/package.json
+++ b/client/package.json
@@ -70,6 +70,7 @@
     "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
+    "katex": "^0.16.11",
     "oidc-client-ts": "^2.2.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -84,6 +85,7 @@
     "react-tabs": "^6.0.2",
     "redux": "^4.2.1",
     "remarkable": "^2.0.1",
+    "remarkable-katex": "^1.2.1",
     "resize-observer-polyfill": "^1.5.1",
     "serve": "^14.2.1",
     "styled-components": "^6.1.1",
