Upgrade all client dependencies to latest

--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,7 @@
     "syntax": "npx eslint . --fix",
     "test:all": "yarn test:unit && yarn test:int && yarn test:e2e",
     "test:e2e:ext": "cross-env ext=true yarn test:e2e",
-    "test:e2e": "playwright test -c ./playwright.config.ts",
+    "test:e2e": "yarn config:test && playwright test -c ./playwright.config.ts",
     "test:int": "jest -c ./jest.config.json ../test/integration --setupFilesAfterEnv ./test/integration/jest.setup.ts",
     "test:unit": "jest -c ./jest.config.json ../test/unit --setupFilesAfterEnv ./test/unit/jest.setup.ts",
     "test:preview:int": "jest -c ./jest.config.json ../test/preview/integration --setupFilesAfterEnv ./test/preview/integration/jest.setup.ts",
@@ -92,27 +92,27 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@babel/core": "7.25.2",
+    "@babel/core": "7.25.7",
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
-    "@babel/plugin-syntax-flow": "7.24.7",
-    "@babel/plugin-transform-react-jsx": "7.25.2",
+    "@babel/plugin-syntax-flow": "7.25.7",
+    "@babel/plugin-transform-react-jsx": "7.25.7",
     "@eslint/eslintrc": "3.1.0",
-    "@eslint/js": "9.11.1",
-    "@playwright/test": "1.47.2",
+    "@eslint/js": "9.12.0",
+    "@playwright/test": "1.48.0",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.5.0",
     "@testing-library/react": "16.0.1",
     "@testing-library/user-event": "14.5.2",
     "@types/jest": "29.5.13",
-    "@types/node": "^22.7.4",
+    "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
-    "globals": "15.9.0",
+    "globals": "15.10.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-watch-typeahead": "^2.2.2",
-    "monocart-coverage-reports": "2.10.9",
-    "playwright": "1.47.2",
+    "monocart-coverage-reports": "2.11.1",
+    "playwright": "1.48.0",
     "prettier": "3.3.3",
     "shx": "0.3.4",
     "ts-jest": "29.2.5"
