--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -47,6 +47,8 @@ jobs:
         run: |
           yarn test:int
           yarn test:unit
+          yarn test:preview:unit
+          yarn test:preview:int
 
       - name: Upload unit and integration test coverage to Codecov
         uses: codecov/codecov-action@v3
@@ -89,16 +91,33 @@ jobs:
     outputs:
       version: ${{ steps.get_version.outputs.version }}
 
-  publish-docker-image:
+  publish-docker-image-ghcr:
     if: | 
       github.event_name == 'push' &&
       (startsWith(github.ref, 'refs/heads/feature/') || startsWith(github.ref, 'refs/heads/release-v'))
       
-    name: Publish Docker image
+    name: Publish Docker image (GHCR)
     needs: [client, get_version]
-    uses: ./.github/workflows/docker.yml
+    uses: ./.github/workflows/docker-ghcr.yml
     with: 
-      registry: ghcr.io
       image-name: into-cps-association/dtaas-web
       version: ${{ needs.get_version.outputs.version }}
       dockerfile: client.dockerfile
+    secrets: inherit
+
+  publish-docker-image-dockerhub:
+    if: | 
+      github.event_name == 'push' &&
+      (startsWith(github.ref, 'refs/heads/feature/') || startsWith(github.ref, 'refs/heads/release-v'))
+      
+    name: Publish Docker image (DockerHub)
+    needs: [client, get_version]
+    uses: ./.github/workflows/docker-dockerhub.yml
+    with: 
+      image-name: intocps/dtaas-web
+      version: ${{ needs.get_version.outputs.version }}
+      dockerfile: client.dockerfile
+      readme-file: client/DOCKER.md
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
