--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -171,7 +171,7 @@ jobs:
     needs: [get_version, test-lib-ms]
     uses: ./.github/workflows/docker-ghcr.yml
     with: 
-      image-name: into-cps-association/libms
+      image-name: libms
       version: ${{ needs.get_version.outputs.version }}
       dockerfile: libms.dockerfile
     secrets: inherit
