--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -114,10 +114,11 @@ jobs:
     needs: [client, get_version]
     uses: ./.github/workflows/docker-dockerhub.yml
     with: 
-      image-name: intocps/dtaas-web
+      image-name: dtaas-web
       version: ${{ needs.get_version.outputs.version }}
       dockerfile: client.dockerfile
       readme-file: client/DOCKER.md
     secrets:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_SCOPE: ${{ secrets.DOCKERHUB_SCOPE }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
