--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -185,10 +185,11 @@ jobs:
     needs: [get_version, test-lib-ms]
     uses: ./.github/workflows/docker-dockerhub.yml
     with: 
-      image-name: intocps/libms
+      image-name: libms
       version: ${{ needs.get_version.outputs.version }}
       dockerfile: libms.dockerfile
       readme-file: servers/lib/DOCKER.md
     secrets:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_SCOPE: ${{ secrets.DOCKERHUB_SCOPE }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
